<resources>
    <string name="app_name">pass</string>
    <string name="title_activity_login">Sign in</string>

    <!--登陆-->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码 (optional)</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_register">注册</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_google_log">Sign in</string>
    <string name="error_Asytask_onDoing">正在尝试登陆请稍后再试</string>
    <string name="error_invalid_user">你的用户名不可用</string>
    <string name="error_invalid_password">你的密码太短了</string>
    <!--注册-->
    <string name="register_password_name">请输入密码</string>
    <string name="register_password_again">请再次输入密码</string>
    <string name="register_user_name">请输入用户名</string>
    <string name="register_email">请输入你的邮箱</string>
    <string name="register_btn_submit">提交</string>

    <string name="error_user_register">用户名太短</string>
    <string name="error_password_register">密码太短</string>
    <string name="error_password_again_register">再次输入密码错误</string>
    <string name="error_email_register">邮箱不合法</string>
    <string name="error_Asytask_register">正在注册</string>

</resources>
