<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <AutoCompleteTextView
                android:hint="@string/register_user_name"
            android:id="@+id/tv_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
            <AutoCompleteTextView
                android:id="@+id/tv_password"
                android:hint="@string/register_password_name"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <AutoCompleteTextView
                android:hint="@string/register_password_again"
                android:id="@+id/tv_password_again"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <AutoCompleteTextView
                android:hint="@string/register_email"
                android:id="@+id/tv_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:hint="@string/register_btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_register_submit"

                />


        </LinearLayout>


    </ScrollView>

</LinearLayout>